--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@
     --navBar: rgba(14, 22, 43, 0.8);
     --navBarAfter: linear-gradient(90deg, #4f46e5, #7c3aed);
     --circleContainer: rgba(23, 22, 71, 0.87);
-    --corH1: #4262ad;
+    --corH1: #C2D4FF;
     --fundoSobre: rgba(255, 255, 255, 0.05);
     --fundoMeusProjetos: rgba(255, 255, 255, 0.05);
     --paragrafoProjeto: rgba(226, 232, 240, 0.8);
